# qwiic_ak975x

examples/pico/example1/: CMakeLists.txt  ak975x_example1.cpp
src/: CMakeLists.txt  qwiic_ak975x.cpp  qwiic_ak975x.h
